@@ -27,6 +27,7 @@ package co.elastic.apm.agent.es.restclient;
 import co.elastic.apm.agent.impl.ElasticApmTracer;
 import co.elastic.apm.agent.impl.transaction.AbstractSpan;
 import co.elastic.apm.agent.impl.transaction.Span;
+import co.elastic.apm.agent.matcher.WildcardMatcher;
 import co.elastic.apm.agent.objectpool.Allocator;
 import co.elastic.apm.agent.objectpool.ObjectPool;
 import co.elastic.apm.agent.objectpool.impl.QueueBasedObjectPool;
@@ -42,6 +43,8 @@ import org.slf4j.LoggerFactory;
 
 import javax.annotation.Nullable;
 import java.io.IOException;
+import java.util.Arrays;
+import java.util.List;
 
 import static org.jctools.queues.spec.ConcurrentQueueSpec.createBoundedMpmc;
 
@@ -49,7 +52,12 @@ public class ElasticsearchRestClientInstrumentationHelperImpl implements Elastic
 
     private static final Logger logger = LoggerFactory.getLogger(ElasticsearchRestClientInstrumentationHelperImpl.class);
 
-    public static final String SEARCH_QUERY_PATH_SUFFIX = "_search";
+    public static final List<WildcardMatcher> QUERY_WILDCARD_MATCHERS = Arrays.asList(
+        WildcardMatcher.valueOf("*_search"),
+        WildcardMatcher.valueOf("*_msearch"),
+        WildcardMatcher.valueOf("*_msearch/template"),
+        WildcardMatcher.valueOf("*_search/template"),
+        WildcardMatcher.valueOf("*_count"));
     public static final String SPAN_TYPE = "db";
     public static final String ELASTICSEARCH = "elasticsearch";
     public static final String SPAN_ACTION = "request";
@@ -97,7 +105,7 @@ public class ElasticsearchRestClientInstrumentationHelperImpl implements Elastic
 
         if (span.isSampled()) {
             span.getContext().getHttp().withMethod(method);
-            if (endpoint.endsWith(SEARCH_QUERY_PATH_SUFFIX)) {
+            if (WildcardMatcher.isAnyMatch(QUERY_WILDCARD_MATCHERS, endpoint)) {
                 if (httpEntity != null && httpEntity.isRepeatable()) {
                     try {
                         IOUtils.readUtf8Stream(httpEntity.getContent(), span.getContext().getDb().withStatementBuffer());
